# mathmentor

./: .gitignore  README.md  pyproject.toml
api/: admin.py  filters.py  models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_question_question_alter_rightanswer_answer_and_more.py  0003_remove_question_wrong_answers_question_wrong_answers.py  0004_remove_level_questions_level_questions.py  0005_remove_stage_levels_stage_levels.py  0006_remove_difficult_question_question_difficult.py  0007_stage_image.py
config/: asgi.py  settings.py  urls.py  wsgi.py
